--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
-    "axios": "^0.27.2"
+    "react-router-dom": "^7.6.2",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "typescript": "^4.7.2"
