--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,10 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@types/jest": "^27.4.1",
+    "jest": "^28.1.0"
   }
 }
