--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.mail.host=smtp.example.com
 spring.mail.port=587
 spring.mail.username=tu@correo.com
 spring.mail.password=secret
+
+jwt.secret=MiClaveSecretaBase64==
