--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,5 +23,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@types/jest": "^27.4.1",
     "jest": "^28.1.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
